# raymarchvibe

./: .gitignore  BUGFIX_SUMMARY.md  CHANGELOG.md  CMakeLists.txt  FIX_COMPLETE.md  GEMINI.md  LICENSE.txt  MORPHING_PARTICLES_PALETTE_FIX.md  PALETTE_FEATURE.md  README.md  README.txt  REVIEW_SUMMARY.md  SHADER_UPGRADES_SUMMARY.md  TODO.md  VERIFICATION_CHECKLIST.md  commit_message.txt  gemini.md  heart.txt  imgui.ini  raymarchtree.txt  temp_function_overloads.glsl  themes.cpp
documentation/: CHANGELOG.md  CODE_REVIEW.md  PALETTE_FEATURE.md  README.md  SHADERS.md  SHADER_GUIDE.MD  TODO.md
documentation/inspiration/: 1.frag  10.frag  11.frag  12.frag  13.frag  14.frag  15.frag  16.frag  17.frag  18.frag  19.frag  2.frag  20.frag  3.frag  4.frag  5.frag  6.frag  7.frag  8.frag  9.frag
include/: ColorPaletteGenerator.h  Effect.h  GEMINI.md  ImGuiSimpleTimeline.h  ImageEffect.h  NodeTemplates.h  OutputNode.h  Renderer.h  ShaderEffect.h  ShaderParameterControls.h  ShaderParser.h  Timeline.h
include/Bess/Config/: Themes.h
include/glad/: glad.h
shaders/: klein.frag  morphing_particles.frag  morphing_particles_debug.frag  palette_demo.frag  palette_sync_demo.frag  passthrough.frag  raymarch_v1.frag  raymarch_v2.frag  recursive_dna_helix.frag  star.frag  star.vert  texture.frag  yellow_smile_viz_fixed.frag
shaders/presets/: Aderrasi + Geiss - Airhandler (Kali Mix) - Painterly Kaleidoscope 2.milk  Aderrasi - Bow To Gravity.milk  Aderrasi - Brakefreak-bitcore tweak.milk  Aderrasi - Halls Of Centrifuge.milk  Aderrasi - Songflower (Moss Posy).milk  Aderrasi - What Cannot Be Undone.milk  Bmelgren - Pentultimate Nerual Slipstream (Tweak 2).milk  Esotic & Rozzer - Now And Later.milk  Esotic & Rozzer - The Dark Side Of My Moon.milk  Fvese - The Tunnel (Final Stage Mix).milk  Geiss - Cauldron - painterly 5.milk  Geiss - Cosmic Dust 2.milk  Geiss - Drop Shadow 1.milk  Geiss - Inkblot.milk  Geiss - Reaction Diffusion 3 (Lichen Mix).milk  Geiss and Zylot - Reaction Diffusion 3 (Overload Mix 2).milk  Idiot24-7 - Ascending to heaven 2.milk  ORB - Acid Cycle.milk  PieturP - IT_MIGHT_BE_EVIL_phat_remix.milk  Reenen Geiss - Triple Feedback_phat_edit.milk  Rovastar & Che - Definitly Not For The Epileptic (Inner Perspective Of Life Mix).milk  Rovastar & Idiot24-7 - Balk Acid.milk  Rovastar & Rocke - Sugar Spun Sister.milk  Rovastar + Loadus + Geiss - FractalDrop (Atmospheric Mix).milk  Rovastar + Loadus + Geiss - FractalDrop (Spinning Mix).milk  Rovastar + Loadus + Geiss - FractalDrop (Triple Mix).milk  Rovastar - Dark Ritual (Star Of Destiny Mix).milk  Rovastar - Harlequin's Fractal Encounter.milk  Rovastar - Harlequin's Liquid Dragon.milk  Rovastar - Solarized Space (Space DNA Mix).milk  Rozzor & StudioMusic - Vertigyny (Geiss Shape Mod).milk  Rozzor & Unchained - Crescat Scientia, Vita Excolatur.milk  TEcHNO & SandStorm - Psychodelic Highway.milk  Tokyo corridor (shifter tumbling cubes remix).milk  Unchained - All You Can Eat.milk  Unchained - Making a Science of It 4.milk  Unchained - Making a Science of It 7.milk  Unchained - Morat's Final Voyage.milk  Unchained - Rewop.milk  Unchained - Spinal Mixdown 2.milk  (+15 more)
shaders/samples/: fractal1.frag  fractal2.frag  fractal3.frag  fractal_tree_audio.frag  shape_heart.frag  simple_red.frag  tester_cube.frag  uv_pattern.frag
shaders/templates/: RecursiveRubiksCube.frag  bezier_fractal_visualizer.frag  debug_color.frag  dna_helix_morph.frag  exotic_fractal.frag  filter_brightness_contrast.frag  filter_vignette.frag  fractal_tree_audio.frag  gemini_bubble.frag  ichannel_visualizer.frag  invert_color.frag  noise_value.frag  organic_audio_viz.frag  organic_fractal_tree.frag  plasma_basic.frag  psychedelic_smiley.frag  raymarch_sphere.frag  raymarch_star.frag  recursive_rubiks_cube.frag  shape_circle.frag  shape_soap_bubble (Copy).frag  shape_soap_bubble.frag  simple_color.frag  sphere.frag  texture_passthrough.frag  viz_circular_audio.frag
shaders/templates/post_processing/: filter_bloom.frag  filter_chromatic_aberration.frag  filter_color_correction.frag  filter_dither.frag  filter_grain.frag  filter_kaleidoscope.frag  filter_master_color.frag  filter_movement.frag  filter_posterize.frag  filter_sharpen.frag  filter_tonemapping.frag  generator_noise.frag
src/: AudioSystem.cpp  AudioSystem.h  ColorPaletteGenerator.cpp  GEMINI.md  IAudioListener.h  ImageEffect.cpp  MilkdropPresetEffect.h  NodeTemplates.cpp  OutputNode.cpp  Renderer.cpp  Renderer.h  ShaderEffect.cpp  ShaderManager.cpp  ShaderManager.h  ShaderParser.cpp  ShaderParser.h  ShadertoyIntegration.cpp  ShadertoyIntegration.h  UIManager.cpp  UIManager.h  Utils.cpp  Utils.h  VideoRecorder.cpp  VideoRecorder.h  glad.c  main (Copy).cpp  main.cpp  themes.cpp
